--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context="com.ancientlore.aldict.MainActivity"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:bind="http://schemas.android.com/tools"
 	>
-	<include
-		layout="@layout/toolbar"
-		android:id="@+id/include"
-		/>
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/listView"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/include"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		/>
-</android.support.constraint.ConstraintLayout>
+	<android.support.constraint.ConstraintLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context="com.ancientlore.aldict.MainActivity"
+		>
+		<include
+			layout="@layout/toolbar"
+			android:id="@+id/include"
+			/>
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/listView"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/include"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			/>
+		<android.support.design.widget.FloatingActionButton
+			android:id="@+id/add"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginBottom="16dp"
+			android:layout_marginEnd="16dp"
+			android:layout_marginRight="16dp"
+			android:tint="@android:color/white"
+			app:srcCompat="@drawable/plus"
+			android:onClick="addNewWord"
+			/>
+	</android.support.constraint.ConstraintLayout>
+</layout>
