--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,13 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:bind="http://schemas.android.com/tools"
 	>
+
+	<data>
+		<variable
+			name="viewModel"
+			type="com.ancientlore.aldict.MainViewModel" />
+
+	</data>
 	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
