--- a/app/src/main/res/layout/activity_new_word.xml
+++ b/app/src/main/res/layout/activity_new_word.xml
@@ -4,7 +4,7 @@
 		xmlns:bind="http://schemas.android.com/tools"
 	>
 	<data>
-		<variable name="viewModel" type="com.ancientlore.aldict.WordViewModel"/>
+		<variable name="word" type="com.ancientlore.aldict.WordViewModel"/>
 	</data>
 
 	<android.support.constraint.ConstraintLayout
@@ -32,7 +32,7 @@
 				android:singleLine="true"
 				android:maxLines="1"
 				android:hint="@string/word"
-				android:text="@{viewModel.getWord()}"
+				android:text="@{word.getName()}"
 				/>
 		</android.support.design.widget.TextInputLayout>
 
@@ -52,7 +52,7 @@
 				android:singleLine="true"
 				android:maxLines="1"
 				android:hint="@string/translation"
-				android:text="@{viewModel.getTranslations()}"
+				android:text="@{word.getTranslations()}"
 				/>
 		</android.support.design.widget.TextInputLayout>
 
@@ -72,8 +72,25 @@
 				android:singleLine="true"
 				android:maxLines="1"
 				android:hint="@string/transcription"
-				android:text="@{viewModel.getTranscription()}"
+				android:text="@{word.getTranscription()}"
 				/>
 		</android.support.design.widget.TextInputLayout>
+		<Button
+			android:text="@string/submit"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/submitButton"
+			app:layout_constraintTop_toBottomOf="@+id/transcriptionWrapper"
+			app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginLeft="8dp"
+			android:layout_marginStart="8dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp"
+			android:layout_marginRight="8dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginBottom="8dp"
+			android:layout_marginTop="8dp"
+			android:onClick="submitNewWord"
+			/>
 	</android.support.constraint.ConstraintLayout>
 </layout>
