--- a/app/src/main/res/layout/activity_new_word.xml
+++ b/app/src/main/res/layout/activity_new_word.xml
@@ -5,12 +5,14 @@
 	>
 	<data>
 		<variable name="wordModel" type="com.ancientlore.aldict.WordViewModel"/>
+
+		<import type="android.view.View"/>
 	</data>
 
 	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-	>
+		>
 		<include
 			layout="@layout/toolbar"
 			android:id="@+id/include"
@@ -27,6 +29,9 @@
 			android:layout_marginStart="8dp"
 			android:layout_marginEnd="8dp"
 			android:layout_marginRight="8dp"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintBottom_toTopOf="@+id/translationWrapper"
+			app:layout_constraintVertical_chainStyle="packed"
 			>
 			<android.support.v7.widget.AppCompatEditText
 				android:id="@+id/word"
@@ -51,6 +56,8 @@
 			android:layout_marginRight="8dp"
 			android:layout_marginLeft="8dp"
 			android:layout_marginStart="8dp"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintBottom_toTopOf="@+id/transcriptionWrapper"
 			>
 			<android.support.v7.widget.AppCompatEditText
 				android:id="@+id/translation"
@@ -75,6 +82,8 @@
 			android:layout_marginStart="8dp"
 			android:layout_marginEnd="8dp"
 			android:layout_marginRight="8dp"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintBottom_toTopOf="@+id/synonymsWrapper"
 			>
 			<android.support.v7.widget.AppCompatEditText
 				android:id="@+id/transcription"
@@ -93,36 +102,73 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			app:layout_constraintTop_toBottomOf="@+id/transcriptionWrapper"
-			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			android:layout_marginLeft="8dp"
 			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:layout_marginRight="8dp"
+			app:layout_constraintEnd_toStartOf="@+id/addSynonymBtn"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintBottom_toTopOf="@+id/synonymsList"
 			>
 			<android.support.design.widget.TextInputEditText
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:hint="@string/synonyms"
+				android:text="@={wordModel.synonym}"
 				/>
 		</android.support.design.widget.TextInputLayout>
+
+		<ImageButton
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:srcCompat="@drawable/plus"
+			android:id="@+id/addSynonymBtn"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp"
+			android:layout_marginRight="8dp"
+			app:layout_constraintTop_toTopOf="@+id/synonymsWrapper"
+			app:layout_constraintBottom_toBottomOf="@+id/synonymsWrapper"
+			android:contentDescription="@string/synonyms"
+			android:onClick="@{() -> wordModel.onAddSynonymClicked()}"
+			/>
+
+		<TextView
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:id="@+id/synonymsList"
+			app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginLeft="8dp"
+			android:layout_marginStart="8dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp"
+			android:layout_marginRight="8dp"
+			android:layout_marginTop="8dp"
+			app:layout_constraintTop_toBottomOf="@+id/synonymsWrapper"
+			app:layout_constraintBottom_toTopOf="@+id/noteWrapper"
+			bind:text="TextView"
+			android:textSize="16sp"
+			android:text="@={wordModel.synonyms}"
+			android:visibility="@{wordModel.synonyms.get().isEmpty() ? View.GONE : View.VISIBLE}"
+			bind:visibility="gone"
+			/>
 
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/noteWrapper"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			app:layout_constraintTop_toBottomOf="@+id/synonymsWrapper"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			android:layout_marginLeft="8dp"
 			android:layout_marginStart="8dp"
 			android:layout_marginEnd="8dp"
 			android:layout_marginRight="8dp"
+			app:layout_constraintHorizontal_bias="0.0"
+			app:layout_constraintTop_toBottomOf="@+id/synonymsList"
 			>
 			<android.support.design.widget.TextInputEditText
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:hint="@string/note"
+				android:text="@={wordModel.note}"
 				/>
 		</android.support.design.widget.TextInputLayout>
 
@@ -131,7 +177,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/submitButton"
-			app:layout_constraintTop_toBottomOf="@+id/transcriptionWrapper"
 			app:layout_constraintStart_toStartOf="parent"
 			android:layout_marginLeft="8dp"
 			android:layout_marginStart="8dp"
@@ -140,7 +185,6 @@
 			android:layout_marginRight="8dp"
 			app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginBottom="8dp"
-			android:layout_marginTop="8dp"
 			android:onClick="submitNewWord"
 			/>
 	</android.support.constraint.ConstraintLayout>
