switched to direct http translate request: google cloud translate api happens to be non-pricefree

--- a/app/src/main/res/layout/activity_new_word.xml
+++ b/app/src/main/res/layout/activity_new_word.xml
@@ -42,6 +42,7 @@
 				android:maxLines="1"
 				android:hint="@string/word"
 				android:text="@={wordModel.name}"
+				android:addTextChangedListener="@{wordModel.textWatcher}"
 				/>
 		</android.support.design.widget.TextInputLayout>
 
