--- a/app/src/main/res/layout/activity_new_word.xml
+++ b/app/src/main/res/layout/activity_new_word.xml
@@ -42,7 +42,7 @@
 				android:maxLines="1"
 				android:hint="@string/word"
 				android:text="@={wordModel.name}"
-				android:addTextChangedListener="@{wordModel.textWatcher}"
+				android:addTextChangedListener="@{wordModel.typeWordWatcher}"
 				/>
 		</android.support.design.widget.TextInputLayout>
 
